fix(layout):fixed menu and tags not breaking to next line on smaller screens

--- a/assets/css/widget.scss
+++ b/assets/css/widget.scss
@@ -15,13 +15,17 @@
 .fr-wdgt-terms {
     ul {
         display: flex;
-        gap: var(--spacing-md);
+        gap: var(--spacing-2xs) var(--spacing-md);
         padding: 0;
         margin: 0;
+        flex-wrap: wrap;
+        align-items: flex-start;
     }
 
     li {
         list-style: none;
+        white-space: nowrap;
+        flex: 0 0 auto;
     }
 }
 
